Use sha256 instead of md5

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -429,7 +429,7 @@ jobs:
         private_key = ./ca.key
         default_days = 730
         default_crl_days = 30
-        default_md = md5
+        default_md = sha256
         preserve = no
         policy = generic_policy
         copy_extensions = copyall
