--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@wildboar/scrypt-0": "^1.0.2",
         "@wildboar/x500": "^1.0.43",
         "applicationinsights": "^2.2.2",
+        "applicationinsights-native-metrics": "^0.0.7",
         "asn1-ts": "^7.0.3",
         "chalk": "^4.1.2",
         "class-transformer": "^0.5.1",
