--- a/apps/x500-cli/package.json
+++ b/apps/x500-cli/package.json
@@ -2,7 +2,7 @@
     "name": "@wildboar/x500-cli",
     "version": "0.0.1",
     "bin": {
-        "x500": "assets/run.sh"
+        "x500": "./main.js"
     },
     "license": "MIT"
 }
