--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
         "ts-jest": "27.0.5",
         "ts-node": "~10.1.0",
         "tslib": "^2.3.1",
-        "typescript": "4.3.5"
+        "typescript": "4.3.5",
+        "webpack-merge": "^5.8.0"
     },
     "prisma": {
         "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} apps/meerkat/src/prisma/seed.ts"
