--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -661,24 +661,24 @@ jobs:
             --accessPoint="idm://dsa01.root.${{ env.ZONE }}:4632" \
             --profile=root \
             -t
-      - name: Seed the C=GB DSA
-        run: |
-          node ./dist/apps/create-test-dit/main.js \
-            --accessPoint="idm://dsa01.gb.${{ env.ZONE }}:4632" \
-            --profile=gb \
-            -t
-      - name: Seed the C=RU DSA
-        run: |
-          node ./dist/apps/create-test-dit/main.js \
-            --accessPoint="idm://dsa01.ru.${{ env.ZONE }}:4632" \
-            --profile=ru \
-            -t
-      - name: Seed the C=RU,L=Moscow DSA
-        run: |
-          node ./dist/apps/create-test-dit/main.js \
-            --accessPoint="idm://dsa01.ru-moscow.${{ env.ZONE }}:4632" \
-            --profile=ru-moscow \
-            -t
+      # - name: Seed the C=GB DSA
+      #   run: |
+      #     node ./dist/apps/create-test-dit/main.js \
+      #       --accessPoint="idm://dsa01.gb.${{ env.ZONE }}:4632" \
+      #       --profile=gb \
+      #       -t
+      # - name: Seed the C=RU DSA
+      #   run: |
+      #     node ./dist/apps/create-test-dit/main.js \
+      #       --accessPoint="idm://dsa01.ru.${{ env.ZONE }}:4632" \
+      #       --profile=ru \
+      #       -t
+      # - name: Seed the C=RU,L=Moscow DSA
+      #   run: |
+      #     node ./dist/apps/create-test-dit/main.js \
+      #       --accessPoint="idm://dsa01.ru-moscow.${{ env.ZONE }}:4632" \
+      #       --profile=ru-moscow \
+      #       -t
 
   functional_testing:
     name: Functional Testing
