--- a/apps/meerkat/package.json
+++ b/apps/meerkat/package.json
@@ -12,7 +12,7 @@
             "url": "https://github.com/JonathanWilbur"
         }
     ],
-    "version": "1.0.0-beta.30",
+    "version": "1.0.0",
     "license": "MIT",
     "bin": {
         "meerkat": "./start-meerkat"
