Tolerate double binds

--- a/apps/meerkat/package.json
+++ b/apps/meerkat/package.json
@@ -12,10 +12,10 @@
             "url": "https://github.com/JonathanWilbur"
         }
     ],
-    "version": "1.0.0",
+    "version": "1.0.1",
     "license": "MIT",
     "bin": {
-        "meerkat": "./start-meerkat"
+        "meerkat": "./main.js"
     },
     "keywords": [
         "X.500",
