--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
         "@nrwl/cli": "13.4.2",
         "@nrwl/eslint-plugin-nx": "13.4.2",
         "@nrwl/jest": "13.4.2",
+        "@nrwl/js": "13.4.2",
         "@nrwl/linter": "13.4.2",
         "@nrwl/node": "13.4.2",
         "@nrwl/nx-cloud": "13.0.2",
