--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
         "baseUrl": ".",
         "paths": {
             "@wildboar/idm": ["libs/idm/src/index.ts"],
+            "@wildboar/itot": ["libs/itot/src/index.ts"],
             "@wildboar/ldap-socket": ["libs/ldap-socket/src/index.ts"],
             "@wildboar/meerkat-types": ["libs/meerkat-types/src/index.ts"],
             "@wildboar/x500-cli-config": ["libs/x500-cli-config/src/index.ts"],
