Basic unit testing of verifyCertPath()

--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
         "@nestjs/swagger": "^5.2.0",
         "@nestjs/terminus": "^8.0.6",
         "@prisma/client": "^3.12.0",
-        "@wildboar/ldap": "^1.2.7",
-        "@wildboar/scrypt-0": "^1.0.2",
-        "@wildboar/x500": "^1.0.43",
+        "@wildboar/ldap": "^1.2.8",
+        "@wildboar/scrypt-0": "^1.0.3",
+        "@wildboar/tal": "^1.0.3",
+        "@wildboar/x500": "^1.0.45",
         "applicationinsights": "^2.2.2",
         "applicationinsights-native-metrics": "^0.0.7",
         "asn1-ts": "^7.0.3",
