--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@nestjs/terminus": "^8.0.6",
         "@prisma/client": "^3.12.0",
         "@wildboar/ldap": "^1.2.8",
+        "@wildboar/safecurves-pkix-18": "^1.0.5",
         "@wildboar/scrypt-0": "^1.0.3",
         "@wildboar/tal": "^1.0.3",
         "@wildboar/x500": "^1.0.45",
