Implement OCSP checking

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@nestjs/terminus": "^8.0.6",
         "@prisma/client": "^3.12.0",
         "@wildboar/ldap": "^1.2.8",
+        "@wildboar/ocsp": "^1.0.2",
         "@wildboar/pki-stub": "^1.1.2",
         "@wildboar/safecurves-pkix-18": "^1.0.5",
         "@wildboar/scrypt-0": "^1.0.3",
@@ -85,6 +86,7 @@
         "@nrwl/cli": "13.4.2",
         "@nrwl/eslint-plugin-nx": "13.4.2",
         "@nrwl/jest": "13.4.2",
+        "@nrwl/js": "13.4.2",
         "@nrwl/linter": "13.4.2",
         "@nrwl/node": "13.4.2",
         "@nrwl/nx-cloud": "13.0.2",
