Create curl() and related tests

--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
         "@nestjs/swagger": "^5.2.0",
         "@nestjs/terminus": "^8.0.6",
         "@prisma/client": "^3.12.0",
+        "@wildboar/cms": "^1.0.2",
         "@wildboar/ldap": "^1.2.8",
         "@wildboar/ocsp": "^1.0.2",
         "@wildboar/pki-stub": "^1.1.2",
         "@wildboar/safecurves-pkix-18": "^1.0.5",
         "@wildboar/scrypt-0": "^1.0.3",
+        "@wildboar/scvp": "^1.0.2",
         "@wildboar/tal": "^1.0.3",
         "@wildboar/x500": "^1.0.45",
         "applicationinsights": "^2.2.2",
