--- a/k8s/charts/meerkat-dsa/templates/web-admin.service.yaml
+++ b/k8s/charts/meerkat-dsa/templates/web-admin.service.yaml
@@ -16,7 +16,7 @@ spec:
   ports:
   - name: web-admin
     protocol: TCP
-    port: {{ .Values.webAdmin.port | default 18080 | int }}
+    port: {{ .Values.web_admin_port | default 18080 | int }}
     targetPort: 18080
   {{- if eq (.Values.adminService.type | lower) "loadbalancer" }}
   externalTrafficPolicy: {{ .Values.adminService.externalTrafficPolicy | default "Local" }}
