--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,9 +8,9 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "importHelpers": true,
-        "target": "es2015",
+        "target": "ES2021",
         "module": "esnext",
-        "lib": ["es2017", "es2019", "dom"],
+        "lib": ["es2021", "es2017", "es2019", "dom"],
         "skipLibCheck": true,
         "skipDefaultLibCheck": true,
         "strictNullChecks": true,
