MEERKAT_SIGNING_KEY -> MEERKAT_SIGNING_KEY_FILE

--- a/.env
+++ b/.env
@@ -2,6 +2,10 @@
 # DATABASE_URL=mysql://root:example@localhost:3306/directory?connection_limit=40&pool_timeout=30
 DATABASE_URL=mysql://root:example@localhost:3306/directory
 MEERKAT_WEB_ADMIN_PORT=18080
+MEERKAT_WEB_ADMIN_AUTH_USERNAME=asdf
+MEERKAT_WEB_ADMIN_AUTH_PASSWORD=asdf
+MEERKAT_WEB_ADMIN_AUTH_REALM=testeroo
+MEERKAT_WEB_ADMIN_USE_TLS=1
 MEERKAT_IDM_PORT=4632
 MEERKAT_LDAP_PORT=1389
 # MEERKAT_LDAPS_PORT=1636
@@ -9,7 +13,7 @@ MEERKAT_LDAP_PORT=1389
 MEERKAT_TLS_CERT_FILE=data/keypair/cert.pem
 MEERKAT_TLS_KEY_FILE=data/keypair/key.pem
 MEERKAT_SIGNING_CERTS_CHAIN_FILE=data/keypair/cert.pem
-MEERKAT_SIGNING_KEY=data/keypair/key.pem
+MEERKAT_SIGNING_KEY_FILE=data/keypair/key.pem
 MEERKAT_SENTINEL_DOMAIN=google.com
 MEERKAT_ADMINISTRATOR_EMAIL=jonathan@wilbur.space
 MEERKAT_INIT_JS=data/init.mjs
