--- a/pkg/docker-compose.yaml
+++ b/pkg/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       # MEERKAT_TLS_CERT_FILE: /data/keypair/cert.pem
       # MEERKAT_TLS_KEY_FILE: /data/keypair/key.pem
       # MEERKAT_SIGNING_CERTS_CHAIN_FILE: /data/keypair/cert.pem
-      # MEERKAT_SIGNING_KEY: /data/keypair/key.pem
+      # MEERKAT_SIGNING_KEY_FILE: /data/keypair/key.pem
       # MEERKAT_INIT_JS: /data/init.mjs
     hostname: 'meerkat'
     labels:
