--- a/k8s/charts/meerkat-dsa/values.yaml
+++ b/k8s/charts/meerkat-dsa/values.yaml
@@ -265,4 +265,8 @@ transcode_distinguished_values_to_der: true
 transcode_values_to_der: true
 # trust_anchors_file: signingTrustAnchorListConfigName
 use_database_when_there_are_x_subordinates: 1000
+# web_admin_auth_username: admin
+# web_admin_auth_password: "USJ6TrD3GLOAsHN7F7GgkEq/VsQe33wwaPuMm3Ormf8="
+# web_admin_auth_realm: "Bigboi's Playhouse"
+web_admin_use_tls: true
 web_admin_port: 18080
