Remove DANGEROUSLY_ to enable DOP and DSP

--- a/.env
+++ b/.env
@@ -40,8 +40,8 @@ MEERKAT_LDAP_BUFFER_SIZE=1000000
 MEERKAT_MIN_AUTH_LEVEL_FOR_CHAINING=0
 MEERKAT_MIN_AUTH_LOCAL_QUALIFIER_FOR_CHAINING=0
 MEERKAT_ENABLE_DAP=1
-MEERKAT_DANGEROUSLY_ENABLE_DSP=1
-MEERKAT_DANGEROUSLY_ENABLE_DOP=1
+MEERKAT_ENABLE_DSP=1
+MEERKAT_ENABLE_DOP=1
 MEERKAT_TCP_TIMEOUT_IN_SECONDS=600
 MEERKAT_TCP_NO_DELAY=0
 MEERKAT_MAX_CONNECTIONS=100
