--- a/k8s/charts/meerkat-dsa/templates/config.yaml
+++ b/k8s/charts/meerkat-dsa/templates/config.yaml
@@ -15,8 +15,8 @@ data:
   client_cert_engine: {{ .Values.client_cert_engine }}
   {{- end }}
   chaining_tls_optional: {{ .Values.chaining_tls_optional | ternary 1 0 | quote }}
-  dangerously_enable_dop: {{ .Values.dangerously_enable_dop | ternary 1 0 | quote }}
-  dangerously_enable_dsp: {{ .Values.dangerously_enable_dsp | ternary 1 0 | quote }}
+  enable_dop: {{ .Values.enable_dop | ternary 1 0 | quote }}
+  enable_dsp: {{ .Values.enable_dsp | ternary 1 0 | quote }}
   {{- if .Values.ecdh_curves }}
   ecdh_curves: {{ .Values.ecdh_curves | quote }}
   {{- end }}
