--- a/.env
+++ b/.env
@@ -10,12 +10,14 @@ MEERKAT_IDM_PORT=4632
 MEERKAT_LDAP_PORT=1389
 # MEERKAT_LDAPS_PORT=1636
 # FIXME: Make this a chain!
+MEERKAT_TLS_CA_FILE=data/keypair/cert.pem
 MEERKAT_TLS_CERT_FILE=data/keypair/cert.pem
 MEERKAT_TLS_KEY_FILE=data/keypair/key.pem
 MEERKAT_TLS_CRL_FILE=data/crl.pem
 MEERKAT_SIGNING_CERTS_CHAIN_FILE=data/keypair/cert.pem
 MEERKAT_SIGNING_KEY_FILE=data/keypair/key.pem
 MEERKAT_SIGNING_CRL_FILE=data/crl.pem
+MEERKAT_SIGNING_CA_FILE=data/keypair/cert.pem
 MEERKAT_SENTINEL_DOMAIN=google.com
 MEERKAT_ADMINISTRATOR_EMAIL=jonathan@wilbur.space
 MEERKAT_INIT_JS=data/init.mjs
