--- a/.env
+++ b/.env
@@ -18,6 +18,8 @@ MEERKAT_SIGNING_CERTS_CHAIN_FILE=data/keypair/cert.pem
 MEERKAT_SIGNING_KEY_FILE=data/keypair/key.pem
 MEERKAT_SIGNING_CRL_FILE=data/crl.pem
 MEERKAT_SIGNING_CA_FILE=data/keypair/cert.pem
+# Broken because of a bug in the ITU specifications: PKI-Stub definitions change to EXPLICIT tagging!
+# MEERKAT_ATTR_CERT_CHAIN_FILE=data/attr-cert.pem
 MEERKAT_SENTINEL_DOMAIN=google.com
 MEERKAT_ADMINISTRATOR_EMAIL=jonathan@wilbur.space
 MEERKAT_INIT_JS=data/init.mjs
