--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,7 +122,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-  build:
+  build_meerkat_dsa:
     name: Build Meerkat DSA
     runs-on: ubuntu-latest
     needs:
@@ -161,6 +161,31 @@ jobs:
           tags: ghcr.io/wildboar-software/meerkat-dsa:latest,ghcr.io/wildboar-software/meerkat-dsa:${{ env.PUBLISHING_MEERKAT_VERSION }}
           context: ./
           file: ./meerkat.dockerfile
+
+  build_x500_cli:
+    name: Build the X.500 CLI
+    runs-on: ubuntu-latest
+    needs:
+      - publish_libs
+    environment: production
+    strategy:
+      fail-fast: false
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '17'
+      - name: Install NPM Packages
+        run: npm ci
+      - name: Compile the X.500 CLI
+        run: npx nx run x500-cli:build:production --skip-nx-cache
+      - name: Publish NPM Package
+        run: npm publish || true
+        working-directory: ./dist/apps/x500-cli
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   # HOW DOES THIS EVEN WORK?
   # There is no point in this job where it installs Helm, but yet, somehow, this
@@ -201,7 +226,7 @@ jobs:
     name: Deploy Test Environment
     runs-on: ubuntu-latest
     needs:
-      - build
+      - build_meerkat_dsa
       - helm
     environment: production
     strategy:
@@ -412,7 +437,7 @@ jobs:
     name: Deploy Demo Environment
     runs-on: ubuntu-latest
     needs:
-      - build
+      - build_meerkat_dsa
       - helm
       - create_demo_pki
     environment: production
