Fix Helm chart bug

--- a/k8s/charts/meerkat-dsa/values.yaml
+++ b/k8s/charts/meerkat-dsa/values.yaml
@@ -24,7 +24,7 @@ dangerouslyExposeWebAdmin: false
 networkPolicyEnabled: false
 networkPolicyIngressOverride:
   - from:
-      podSelector:
+    - podSelector:
         matchLabels:
           app: whatever
     ports:
