Add icon to Helm chart

--- a/k8s/charts/meerkat-dsa/Chart.yaml
+++ b/k8s/charts/meerkat-dsa/Chart.yaml
@@ -19,3 +19,4 @@ maintainers:
   - name: Jonathan M. Wilbur
     email: jonathan.wilbur@wildboarsoftware.com
     url: https://github.com/JonathanWilbur
+icon: https://wildboarprod.blob.core.windows.net/helm-charts/Wildboar.png
